--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ env/
 
 # Ignore VSCode settings (optional)
 .vscode/
+
+# Ignore Node.js dependencies
+node_modules/
+
+package-lock.json
+package.json
